gtk2-engines-oxygen (1.1.2-2) UNRELEASED; urgency=low

  * debian/control: Updated Vcs-* entries to point to anonscm.d.o.

 -- Kai Wasserbäch <curan@debian.org>  Thu, 08 Sep 2011 22:25:50 +0200

gtk2-engines-oxygen (1.1.2-1) unstable; urgency=low

  * New upstream release. (Closes: #640916)
  * debian/gtk2-engines-oxygen.lintian-overrides: Added with overrides for
    missing manpages (demo apps don't really need them).

 -- Kai Wasserbäch <curan@debian.org>  Thu, 08 Sep 2011 18:38:26 +0200

gtk2-engines-oxygen (1.1.0-1) unstable; urgency=low

  * New upstream release.
  * Update debian/control: add libdbus-glib-1-dev build dependency.

 -- Fathi Boudra <fabo@debian.org>  Sun, 19 Jun 2011 22:00:43 +0300

gtk2-engines-oxygen (1.0.5-1) unstable; urgency=low

  * New upstream version.
  * debian/gbp.conf: Make signed tags the default behaviour.
  * debian/control: Bumped Standards-Version to 3.9.2, no further changes
    required.
  * debian/copyright: Added myself to the "Debian packaging" section.

 -- Kai Wasserbäch <curan@debian.org>  Fri, 20 May 2011 10:13:26 +0200

gtk2-engines-oxygen (1.0.4-1) unstable; urgency=low

  * New upstream version. (Closes: #623442)

 -- Kai Wasserbäch <curan@debian.org>  Wed, 20 Apr 2011 12:49:21 +0200

gtk2-engines-oxygen (1.0.3-1) unstable; urgency=low

  * New upstream version.
    - debian/patches/LP719078_fix_assert_failure.patch: Dropped, was taken
      from upstream.
  * debian/rules: Added "--parallel" to dh_auto_configure invocation.
  * debian/watch: Added "git-import-orig" as a command.

 -- Kai Wasserbäch <curan@debian.org>  Mon, 14 Mar 2011 18:03:50 +0100

gtk2-engines-oxygen (1.0.2-2) unstable; urgency=low

  * Update debian/control:
    - Point to the correct VCS.
    - Bumped B-D on debhelper to 8.
    - Added kde-config-gtk-style to Suggests.
  * Add debian/watch file.
  * Add debian/patches/LP719078_fix_assert_failure.patch (LP: #719078) 
  * Update debian/source:
    - local-options: Added with "unapply-patches".