@@ -1,6 +1,12 @@
 gtk2-engines-oxygen (1.1.2-2) UNRELEASED; urgency=low
 
   * debian/control: Updated Vcs-* entries to point to anonscm.d.o.
+  * Prepare for multiarch:
+    - debian/rules: query ma triplet and pass it to CMake.
+    - debian/control:
+      · Bumped B-D on debhelper.
+      · Bumped B-D on libgtk2.0-dev (multiarch ready since 2.24.5-4).
+      · Added Pre-Depends and Multi-Arch entries to binary package.
 
  -- Kai Wasserbäch <curan@debian.org>  Thu, 08 Sep 2011 22:25:50 +0200
 
